bdr.BDR.scala.code
var fini:Boolean = false
var Msg: String = ""

while (fini == false){
  
  if (estSurMessage){
  	Msg = litMessage();
    
    if (Msg == "R"){
      droite();
      avance();
    }
    
    if (Msg == "L"){
      gauche();avance();
    }
    
    if (Msg == "I"){
      droite();droite();
      avance();
    }
    
    if (Msg == "A"){
      avance();
    }
    
    if (Msg == "B"){
      avance(); avance();
    }
    
    if (Msg == "C"){
      avance();avance(); avance()
    }
    
    if (Msg == "Z"){
      recule();
    }
    
    if (Msg == "Y"){
      recule();recule()
    }
    
    if (Msg == "X"){
      recule();recule(), recule()
    }
    
	} else { 
  		fini = true
  	}
}